Adicionado valor total por mercado com descrição formatada + mudanças no build.gradle e properties